[tool.poetry]
name = "advancing-hero"
version = "1.0"
description = "A game for a college project"

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =  py{36,37,38}
[testenv]
commands=
    pytest
"""
